plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.assetdock'
version = '0.1.0-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.security:spring-security-oauth2-jose'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'
	implementation 'org.apache.commons:commons-csv:1.14.1'
	
	// QR Code / Barcode (Zxing)
	implementation 'com.google.zxing:core:3.5.4'
	implementation 'com.google.zxing:javase:3.5.4'
	
	// PDF Generation (PDFBox)
	implementation 'org.apache.pdfbox:pdfbox:3.0.1'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty 'user.timezone', 'UTC'
	environment 'DOCKER_API_VERSION', '1.41'
	environment 'TESTCONTAINERS_RYUK_DISABLED', 'true'
	exclude '**/*IntegrationTest.class'
	exclude '**/*ApplicationTests.class'
}

task integrationTest(type: Test) {
	useJUnitPlatform()
	systemProperty 'user.timezone', 'UTC'
	environment 'DOCKER_API_VERSION', '1.41'
	environment 'TESTCONTAINERS_RYUK_DISABLED', 'true'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	include '**/*IntegrationTest.class'
	include '**/*ApplicationTests.class'
	shouldRunAfter test
}

check.dependsOn integrationTest

task validateEnv(type: Exec) {
    // Only run this if bootRun is in the task graph
    onlyIf { gradle.taskGraph.hasTask(":bootRun") }
    
    if (System.getProperty('os.name').toLowerCase().contains('win')) {
        commandLine 'powershell', '-ExecutionPolicy', 'Bypass', '-File', 'scripts/validate-env.ps1'
    } else {
        commandLine 'bash', '-c', 'echo "Skipping validate-env (non-Windows)"'
    }
}

// Make sure validateEnv runs before bootRun
tasks.named('bootRun') {
    dependsOn validateEnv
}
